--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             I’m passionate about using technology to solve real-world problems. Whether it's building websites or
             developing mobile apps, I love creating practical solutions that make life simpler and more
             connected.<br><br>
-            Recently, I launched my own micro-company called <strong>Access Soft Labs (ASL)</strong> a growing team
+            Recently, I launched my own micro-company called <strong> <a
+                    href="https://gumboguru01.github.io/ASL/">Access Soft Labs (ASL)</a></strong> a growing team
             focused on building smart, custom applications and websites that meet the unique needs of individuals, small
             businesses, and organizations.<br><br>
             I’m not married yet, but I’m fully committed to growing both personally and professionally. This journey
