--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nyashadzashe Gumboguru | WDD 130</title>
+    <meta name="description"
+        content="Nyashadzashe Gumboguru, WDD 130, BYU–Idaho student homepage showcasing web development projects and goals.">
+    <meta name="author" content="Nyashadzashe Gumboguru">
+
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -34,6 +38,13 @@
             making a meaningful impact alongside others who share the same passion for tech and innovation.
         </p>
     </main>
+    <aside>
+        <h2>Zimbabwe</h2>
+        <img src="images/zimbabwe.jpg" alt="Victoria Falls, Zimbabwe" width="200" height="auto">
+        <p>Zimbabwe is a beautiful country in Southern Africa known for its diverse wildlife and stunning natural
+            wonders such as Victoria Falls and Hwange National Park. It's a land of rich culture and history.</p>
+    </aside>
+
     <footer>
         <p>&copy; 2025 | Nyashadzashe Gumboguru | Zimbabwe</p>
     </footer>
