--- a/index.html
+++ b/index.html
@@ -40,9 +40,23 @@
     </main>
     <aside>
         <h2>Zimbabwe</h2>
-        <img src="images/zimbabwe.jpg" alt="Victoria Falls, Zimbabwe" width="200" height="auto">
-        <p>Zimbabwe is a beautiful country in Southern Africa known for its diverse wildlife and stunning natural
-            wonders such as Victoria Falls and Hwange National Park. It's a land of rich culture and history.</p>
+        <div class="aside-images">
+            <img src="images/zimbabwe.jpg" alt="Victoria Falls, Zimbabwe">
+            <img src="images/hwange.jpg" alt="Hwange National Park">
+            <img src="images/great-zimbabwe.jpg" alt="Great Zimbabwe Ruins">
+            <img src="images/zimbabwe-culture.jpg" alt="Cultural People of Zimbabwe">
+        </div>
+        <p>
+            Zimbabwe is a beautiful country in Southern Africa known for its diverse wildlife and stunning natural
+            wonders such as <a href="https://www.zambiatourism.com/destinations/waterfalls/victoria-falls/">Victoria
+                Falls</a> and <a href="https://www.zimparks.org.zw/hwange-national-park/">Hwange National Park</a>. It's
+            a land of rich <a href="https://www.zimbabwenlapset.org/en/culture-and-sports/">culture and history</a>,
+            including the ancient ruins of <a href="https://whc.unesco.org/en/list/364/">Great Zimbabwe</a> and vibrant
+            traditional communities. The country also boasts breathtaking landscapes—from the rolling Eastern Highlands
+            to the wildlife-filled savannas—and a warm, welcoming spirit that makes it a truly special place to visit
+            and explore.
+        </p>
+
     </aside>
 
     <footer>
