--- a/wwr/about.html
+++ b/wwr/about.html
@@ -8,25 +8,24 @@
         content="Learn about our whitewater rafting company, our mission, and our thrilling adventures." />
     <meta name="author" content="Nyasha Gumboguru" />
     <title>About Us | Whitewater Rafting Co.</title>
-
-    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Georgia:wght@400;700&family=Roboto:wght@400;700&display=swap"
         rel="stylesheet" />
-
-
     <link rel="stylesheet" href="styles/rafting.css" />
 </head>
 
 <body>
     <header>
         <img src="images/wwr-logo.png" alt="Rafting Company Logo" />
+        <h1>White Water Rafting</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
         </nav>
     </header>
 
@@ -37,40 +36,52 @@
         </div>
 
         <article>
-            <img src="images/happy-client.jpg" alt="Happy Client Smiling After Rafting" />
+            <img src="images/client.jpg" alt="Happy Client Smiling After Rafting" />
             <p>Our mission is to bring adventure, thrill, and nature to everyone seeking an unforgettable rafting
                 experience. Come explore with us and make lasting memories!</p>
         </article>
 
-        <section>
+        <section class="history">
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, placeat exercitationem ad sint laborum
-                repellendus eaque, sit eveniet necessitatibus quis suscipit temporibus maiores iste odio atque dicta
-                ipsa, assumenda neque.</p>
+            <div class="history-container">
+                <p>Founded in the heart of adventure country, our company has been thrilling customers since the early
+                    2000s.</p>
+                <img src="images/history.jpg" alt="Historical Image">
+                <p>With a team of experienced guides, we've grown to become one of the leading rafting companies in the
+                    region.</p>
+            </div>
         </section>
 
-        <section>
+        <section class="adventures">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/rafting1.jpg" alt="Rafting Adventure 1" />
-            <img src="images/rafting2.jpg" alt="Rafting Adventure 2" />
-            <img src="images/rafting3.jpg" alt="Rafting Adventure 3" />
-            <img src="images/rafting4.jpg" alt="Rafting Adventure 4" />
-            <img src="images/rafting5.jpg" alt="Rafting Adventure 5" />
+            <div class="adventure-gallery">
+                <figure>
+                    <img src="images/rafting1.jpg" alt="CHINA RFTNG o">
+                    <figcaption>China RAFTING </figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/rafting3.jpg" alt="Half Day Adventure">
+                    <figcaption>Half Day Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting4.jpg" alt="Rapid Rush">
+                    <figcaption>Rapid Rush</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting5.jpg" alt="The Challes">
+                    <figcaption>The Challes</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
 
     <footer>
         <p>&copy; 2025 Whitewater Rafting Co. | Nyasha Gumboguru</p>
         <nav class="socialmedia">
-            <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook-icon.png" alt="Facebook" />
-            </a>
-            <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter-icon.png" alt="Twitter" />
-            </a>
-            <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram-icon.png" alt="Instagram" />
-            </a>
+            <a href="https://facebook.com" target="_blank"><img src="images/facebook-icon.png" alt="Facebook" /></a>
+            <a href="https://twitter.com" target="_blank"><img src="images/twitter-icon.png" alt="Twitter" /></a>
+            <a href="https://instagram.com" target="_blank"><img src="images/instagram-icon.png" alt="Instagram" /></a>
         </nav>
     </footer>
 </body>
