Rafting Project: Contact Us Page

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -43,16 +43,16 @@
             <h2>Meet Our Team</h2>
             <div class="profiles">
                 <figure>
-                    <img src="images/employee1.jpg" alt="Guide Amanda">
-                    <figcaption>Sarah – Lead Adventure Guide</figcaption>
+                    <img src="images/employee1.jpg" alt="Guide Mr Ace">
+                    <figcaption>Mr Ace – Lead Adventure Guide</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/employee2.jpg" alt="Guide Tino">
+                    <img src="images/employee2.jpg" alt="Guide Mike">
                     <figcaption>Mike – Safety Coordinator</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/employee3.jpg" alt="Guide Lisa">
-                    <figcaption>Lisa – Customer Experience Specialist</figcaption>
+                    <img src="images/employee3.jpg" alt="Guide Kim">
+                    <figcaption>Kim – Customer Experience Specialist</figcaption>
                 </figure>
             </div>
         </section>
