--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -38,7 +38,6 @@
             <p><strong>Phone:</strong> (+263) 456-7890</p>
             <p><strong>Email:</strong> <a href="mailto:info@whitewaterrafting.com">info@whitewaterrafting.com</a></p>
         </section>
-
         <section class="employee-profiles">
             <h2>Meet Our Team</h2>
             <div class="profiles">
@@ -56,6 +55,7 @@
                 </figure>
             </div>
         </section>
+
 
         <section class="contact-form">
             <h2>Send Us a Message</h2>
@@ -86,11 +86,14 @@
         </section>
 
         <section class="map">
-            <h2>Our Location</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!..." height="300" style="width: 100%; border: 0;"
-                allowfullscreen loading="lazy"></iframe>
+            <section class="map">
+                <h2>Our Location</h2>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d30189.4151655609!2d29.86145590459727!3d-18.945690505319554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2szw!4v1748780094258!5m2!1sen!2szw"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </section>
 
-        </section>
     </main>
 
     <footer>
